# pagestack

./: .gitignore  README.md  pyproject.toml  requirements.txt  uber-schemaless.epub  uber-vector-search.epub
examples/: urls.txt
kindle-sync/: .sent_urls.txt  urls_to_be_exported.txt
src/pagestack/: auto.py  main.py
