[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pagestack"
version = "0.1.0"
description = "Create an EPUB from a list of URLs to read on your favorite e-reader."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Arpit" }
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "readability-lxml>=0.8.1",
    "ebooklib>=0.18",
    "Pillow>=10.0.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
pagestack = "pagestack.main:main"
pagestack-watch = "pagestack.auto:main"

[dependency-groups]
dev = [
    "build>=1.2.1",
    "twine>=5.1.1",
]

[tool.setuptools.packages.find]
where = ["src"]
